--- a/window.html
+++ b/window.html
@@ -3,6 +3,6 @@
   <head>
   </head>
   <body>
-    <div>Hello, world!</div>
+    <webview id="devany" src="https://devany.herokuapp.com/hosts" style="width:640px; height:480px"></webview>
   </body>
 </html>
